# metro-simulation

./: config.json  metro.json
report/: .gitignore  Makefile  classes.mp  classes.tex  files.tex  interface.tex  main.tex  objects.mp  objects.tex  problem.tex  title.tex  tools.tex
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  CPPLINT.cfg
src/lib/graphics/: CMakeLists.txt
src/lib/graphics/adapter/: CMakeLists.txt  sdl_adapter.cpp  sdl_adapter.h
src/lib/graphics/interface/: CMakeLists.txt  config_editor.cpp  config_editor.h  metro_editor.cpp  metro_editor.h  metro_representation.cpp  metro_representation.h
src/lib/graphics/primitives/: CMakeLists.txt  rectangle.cpp  rectangle.h
src/lib/graphics/shader/: CMakeLists.txt  shader.cpp  shader.h
src/lib/graphics/texture/: CMakeLists.txt  texture.cpp  texture.h
src/lib/simulator/: CMakeLists.txt  line.cpp  line.h  metro.cpp  metro.h  path.cpp  path.h  platform.cpp  platform.h  section.cpp  section.h  simulator.cpp  simulator.h  station.cpp  station.h  train.cpp  train.h
src/lib/util/: CMakeLists.txt
src/lib/util/id_generator/: CMakeLists.txt  id_generator.cpp  id_generator.h
src/lib/util/singleton/: CMakeLists.txt  singleton.cpp  singleton.h
src/proto/: CMakeLists.txt  config.proto  metro.proto
src/shaders/: CMakeLists.txt  rectangle.frag  rectangle.vert
src/textures/: CMakeLists.txt
